Refactor: 학습 API 쿼리 최적화..
