# back/src/config/swagger-output.json
@@ -292,59 +292,17 @@
           "Study"
         ],
         "summary": "단어 학습",
-        "description": "쿼리별 단어 학습 / ?key=true / 커스텀단어 학습만 ?custom=true?customBookId=id",
+        "description": "쿼리별 단어 학습 /?book=correct 등 / 커스텀단어 학습만 ?custom=true?customBookId=id",
         "parameters": [
           {
-            "name": "correct",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
-          },
-          {
-            "name": "incorrect",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
-          },
-          {
-            "name": "csat",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
-          },
-          {
-            "name": "toeic",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
-          },
-          {
-            "name": "toefl",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
-          },
-          {
-            "name": "ielts",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
-          },
-          {
-            "name": "custom",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
-          },
-          {
             "name": "customBookId",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "book",
             "in": "query",
             "schema": {
               "type": "string"
@@ -354,9 +312,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           }
         },
         "security": []
